adds a create auser and list path to nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
    <%= link_to "companies", companies_path %>
    <%= link_to "users", users_path %>
    <%= link_to "lists", lists_path %>
-    <%= link_to "lists", lists_path %>
+   <%= link_to "Create a list", new_list_path %>
+   <%= link_to "Create a User", new_user_path %>
   </nav>
   
     <%= yield %>
