adds edit link to list show page

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,3 +7,6 @@
 <% end %>
 </ul>
 
+<p>This link will only edit the list NAME - Need to find a way to edit the contents/company names within the list</p>
+<%= link_to 'edit', edit_list_path(@list) %>
+
