adds edit link to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,4 +26,7 @@ Favorited:
   <% end %>
 
 
+<p>This link will only edit the list USERName- Need to find a way to edit the contents/company names associated with the user</p>
+<%= link_to 'edit', edit_user_path(@user) %>
+
 
