adds destroy link to user and list page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,4 +29,6 @@ Favorited:
 <p>This link will only edit the list USERName- Need to find a way to edit the contents/company names associated with the user</p>
 <%= link_to 'edit', edit_user_path(@user) %>
 
+<%= link_to 'Destroy',  @user ,  method: :delete, data: { confirm: 'Are you sure?' } %>
+
 
