--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,3 +10,4 @@
 <p>This link will only edit the list NAME - Need to find a way to edit the contents/company names within the list</p>
 <%= link_to 'edit', edit_list_path(@list) %>
 
+<%= link_to 'Destroy',  @list,  method: :delete, data: { confirm: 'Are you sure?' } %>
