adds goals for some pages

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,3 +1,9 @@
+<p> Goals for this page is to allow a user to favoite/follow the page </p>
+<p> Goals for this page is to allow a user to comment on the page </p>
+<p> Goals for this page is to allow a user to add the company to a list they have </p>
+<p> Goals for this page is to see the location based off Google Maps api </p>
+
+
 <h2>Company NAME: <%= @company.title %></h2>
 
 <p>
