--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,9 @@
+<p> [X] Goals for this page is to allow a user to edit their list name </p>
+<p> Goals for this page is to allow a user to see all businesses that they added to the list </p>
+<p> Goals for this page is to allow a user to have CRUD actions with their list </p>
+
+
+
 <h1><%= @list.name %></h1>
 <p>This is list show-- should show contents within a particular lists</p>
 
