--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
 <p>This is user index -- should show all users</p>
+<p> Goals for this page is to ONLY allow ADMIN to see and edit users </p>
+
+
 
 
 <ul>
