updates the views for companies to include adding list in form_for with collection_select

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,3 +1,8 @@
+<p> Goals for this page is to allow users to see most recent/added companies </p>
+<p> Goals for this page is to allow users to search companies </p>
+<p> Goals for this page is to allow users request to add a company to admin </p>
+
+
 
 <ul>
 <% @companies.each do |company| %>
