updates company params to allow companies to be created

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
    <%= link_to "lists", lists_path %>
    <%= link_to "Create a list", new_list_path %>
    <%= link_to "Create a User", new_user_path %>
+   <%= link_to "Create a Company", new_company_path %>
   </nav>
   
     <%= yield %>
