--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -29,11 +29,25 @@ Favorited:
      ❤️
   <% end %>
 
- 
+ <%if false %>
 <%= form_for @company do |f| %>
   <%= f.collection_select :list_ids , List.all, :id, :name %>
   <%= f.hidden_field :company_id, :value => @company.id %>
   <%= f.submit %>
+<% end %>
+
+ <%end %>
+
+ 
+<%= form_for @company do |f| %>
+  <%= f.collection_select :list_ids , List.all, :id, :name %>
+  <%= f.submit %>
+<% end %>
+
+<%= form_for CompanyList.new do |f| %>
+  <%= f.collection_select :list_id , List.all, :id, :name %>
+  <%= f.hidden_field :company_id, value: @company.id %>
+  <%= f.submit "Add to your list" %>
 <% end %>
 
 
