adds comment functionailty

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -53,3 +53,26 @@ Favorited:
 <% end %>
 
 
+Commentors:
+<ul>
+<% @company.users.distinct.each do |user| %>
+  <li>
+    <%= link_to user.username, user_path(user) %>
+  </li>
+<% end %>
+</ul>
+
+<%= form_for @company.comments.build do |f| %>
+  <%= f.hidden_field :company_id %>
+  <p>
+    <%= f.collection_select :user_id, User.all, :id, :username %>
+  </p>  
+  <p>
+    <%= f.label :content, "New Comment" %><br>
+    <%= f.text_area :content %>
+  </p>
+  <br/>
+  <%= f.submit %>
+<% end %>
+
+
