--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -2,6 +2,14 @@
 <p> Goals for this page is to allow users to search companies </p>
 <p> Goals for this page is to allow users request to add a company to admin </p>
 
+<h4>Search for a company</h4>
+
+
+<%= form_tag(companies_path, method: :get) do %>
+ <%= text_field_tag(:search, params[:search]) %>
+  <%= submit_tag 'Search' %>
+<% end %>
+
 
 
 <ul>
