updates the goal for page

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 <h1>this is list index</h1>
-This is list index -- should show all lists
+This is list index -- should show all lists that belongs to a particular user
 
 <ul>
 <% @lists.each do |list| %>
