--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,7 +9,10 @@
 
 <ul>
 <% @list.companies.each do |company| %>
-    <li><%= link_to company.title, company %> 
+    <li><%= link_to company.title, company %>
+    <%= button_to "edit", {:controller => :company_lists,
+      :action => 'update', :company_id => company.id, :current_list => @list.id }, :method => :patch %>
+    </li> 
     <%= button_to "delete", {:controller => :company_lists,
       :action => 'destroy', :company_id => company.id, :current_list => @list.id }, :method => :delete %>
     </li>
