--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -8,19 +8,34 @@
 <h1>Company NAME: <%= @company.title %></h1>
 
 <%# Displays company description %>
-<h2>Content: <%= @company.description %></h2>
+<h2>Content: <%= @company.description %></h2><br>
 
 <%# Displays company comment count %>
-<h3>Comments count: <%= @company.comments.count %></h3>
+<h3>Comments count: <%= @company.comments.count %></h3> 
 <%# Displays company favorite count %>
 <h3>Favorites count: <%= link_to @company.favorites.count, company_favorites_path(@company) %></h3>
+<%# <h3>Favorites count: <%= link_to @company.like_count, company_favorites_path(@company) %>
+
+<%# Adds a company to list -- may have to update/refactor %>
+<br><br>
+ <h3> Add to list: </h3>
+ <div class="companylist_form">
+<%= form_for CompanyList.new do |f| %>
+  <%= f.collection_select :list_id , List.all, :id, :name %>
+  <%= f.hidden_field :company_id, value: @company.id %>
+  <%= f.submit "Add to your list", :class => "btn" %>
+<% end %>
+</div>
+<br><br>
+
 
 <%# Displays comments from user %>
 <h4> Comments: </h4>
   <% @company.comments.each do |comment| %>
   <br>
   <p>  <%= link_to comment.user.username, user_path(comment.user) %> said
-    <%= comment.content %> </p>
+    <%= comment.content %>
+    <%= comment.last_updated %> </p>
   <% end %>
 
 
@@ -41,15 +56,7 @@
 
  <%end %>
 
-<%# Adds a company to list -- may have to update/refactor %>
-<br><br>
- Add to list:
-<%= form_for CompanyList.new do |f| %>
-  <%= f.collection_select :list_id , List.all, :id, :name %>
-  <%= f.hidden_field :company_id, value: @company.id %>
-  <%= f.submit "Add to your list" %>
-<% end %>
-<br><br>
+
 
 <%# Shows commentors username but not the content %>
 <% if false %>
@@ -88,8 +95,8 @@ Commentors:
 <%= form_for Favorite.new do |f| %>
   <%# f.collection_select :favorite_id , Favorite.all, :id, :liked %>
   <%# f.hidden_field :user_id, value: user.id %>
-  <%=f.hidden_field :user_id, value: 8 %>
-  <%=f.hidden_field :liked, value: false %>
+  <%=f.hidden_field :user_id, value: 1 %>
+
   <%=f.hidden_field :company_id, value: @company.id %>
   <%= f.submit "Favorite this company" %>
 <% end %>
