--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,25 +1,27 @@
 <p> [X] Goals for this page is to allow a user to edit their list name </p>
 <p> Goals for this page is to allow a user to see all businesses that they added to the list </p>
 <p> Goals for this page is to allow a user to have CRUD actions with their list </p>
-
-
-
-<h1><%= @list.name %></h1>
 <p>This is list show-- should show contents within a particular lists</p>
+<p> Need to find a way to destroy all companies associated with this list the contents/company names within the list</p>
 
-<ul>
+
+<h1 class="list_name"><%= @list.name %></h1> 
+
+<p class="list_name move"> <%= link_to 'Rename', edit_list_path(@list) %> | <%= link_to 'Destroy List',  @list,  method: :delete, data: { confirm: 'Are you sure?' } %> </p>
+
+
+<ul class="list_ul">
 <% @list.companies.each do |company| %>
-    <li><%= link_to company.title, company %>
-    <%= button_to "edit", {:controller => :company_lists,
-      :action => 'update', :company_id => company.id, :current_list => @list.id }, :method => :patch %>
-    </li> 
+    <li><p class="list_name move"> <%= link_to company.title, company %> </p>
     <%= button_to "delete", {:controller => :company_lists,
-      :action => 'destroy', :company_id => company.id, :current_list => @list.id }, :method => :delete %>
+      :action => 'destroy', :company_id => company.id, :current_list => @list.id }, :method => :delete, :class => 'list_btn' %>
     </li>
 <% end %>
 </ul>
 
-<p>This link will only edit the list NAME - Need to find a way to edit the contents/company names within the list</p>
-<%= link_to 'edit', edit_list_path(@list) %>
 
-<%= link_to 'Destroy',  @list,  method: :delete, data: { confirm: 'Are you sure?' } %>
+<p> <%= link_to "Search Companies", companies_path %> </p>
+
+
+<br>
+<br>
