--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,23 +4,23 @@
 <p>This is list show-- should show contents within a particular lists</p>
 <p> Need to find a way to destroy all companies associated with this list the contents/company names within the list</p>
 
-
+<div class="center">
 <h1 class="list_name"><%= @list.name %></h1> 
 
-<p class="list_name move"> <%= link_to 'Rename', edit_list_path(@list) %> | <%= link_to 'Destroy List',  @list,  method: :delete, data: { confirm: 'Are you sure?' } %> </p>
+<p class="move"> <%= link_to 'Rename', edit_list_path(@list) %> | <%= link_to 'Destroy',  @list,  method: :delete, data: { confirm: 'Are you sure you want to destroy this list?' } %> </p>
+</div>
 
-
-<ul class="list_ul">
+<ol class="list_ul">
 <% @list.companies.each do |company| %>
     <li><p class="list_name move"> <%= link_to company.title, company %> </p>
     <%= button_to "delete", {:controller => :company_lists,
       :action => 'destroy', :company_id => company.id, :current_list => @list.id }, :method => :delete, :class => 'list_btn' %>
     </li>
 <% end %>
-</ul>
+</ol>
 
 
-<p> <%= link_to "Search Companies", companies_path %> </p>
+<p class="center"> <%= link_to "Search Companies", companies_path %> </p>
 
 
 <br>
