--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -20,7 +20,7 @@
 <%# Favorite this company%>
 <div class="center">
 <%= form_for Favorite.new do |f| %>
-  <%=f.hidden_field :user_id, value: 1 %>
+  <%#f.hidden_field :user_id, value: 1 %>
   <%=f.hidden_field :company_id, value: @company.id %>
   <%= f.submit "Favorite this company" %>
 <% end %>
@@ -30,7 +30,7 @@
  <h3> Add to list: </h3>
  <div class="companylist_form">
 <%= form_for CompanyList.new do |f| %>
-  <%= f.collection_select :list_id , List.all, :id, :name %>
+  <%= f.collection_select :list_id , current_user.lists, :id, :name %>
   <%= f.hidden_field :company_id, value: @company.id %>
   <%= f.submit "Add to your list", :class => "btn" %>
 <% end %>
@@ -39,6 +39,7 @@
 
 
 <%# Displays comments from user %>
+<% if false %>
 <h4> Comments: </h4>
   <% @company.comments.each do |comment| %>
   <br>
@@ -46,7 +47,7 @@
     <%= comment.content %>
     <%= comment.last_updated %> </p>
   <% end %>
-
+ <% end %>
 
 <br><br>
 
