--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -13,7 +13,7 @@
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-    <%= f.hidden_field :user_id, :value => 1 %>
+    <%# f.hidden_field :user_id, :value => 1 %>
   </div>
   <div class="actions">
     <%= f.submit %>
