--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
   <%# </p> %>
   <%= render 'layouts/alerts' %>
 
-    <% if current_user %>
+    <% if current_user.admin == false %>
         <%= render 'layouts/logged_in_navbar' %>
+    <% elsif current_user.admin == true %>
+      <%= render 'layouts/admin_logged_in_navbar' %>
     <% else %>
        <%= render 'layouts/logged_out_navbar' %>
     <% end %>
