--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
   <%# </p> %>
   <%= render 'layouts/alerts' %>
 
-    <% if current_user.admin == false %>
+    <% if current_user && current_user.admin == false %>
         <%= render 'layouts/logged_in_navbar' %>
-    <% elsif current_user.admin == true %>
+    <% elsif current_user && current_user.admin == true %>
       <%= render 'layouts/admin_logged_in_navbar' %>
     <% else %>
        <%= render 'layouts/logged_out_navbar' %>
