--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,8 +27,8 @@ Favorited:
 
 
 <p>This link will only edit the list USERName- Need to find a way to edit the contents/company names associated with the user</p>
-<%= link_to 'edit', edit_user_path(@user) %>
+<%= link_to "Account Settings", edit_user_registration_path %>
 
-<%= link_to 'Destroy',  @user ,  method: :delete, data: { confirm: 'Are you sure?' } %>
+
 
 
