updates layout link routes and adds admin gem

--- a/app/views/layouts/_logged_out_navbar.html.erb
+++ b/app/views/layouts/_logged_out_navbar.html.erb
@@ -3,8 +3,8 @@
     <li class="logo"><a href="#">Black Owned</a></li>
 
     <li class="item"><%= link_to "All Companies", companies_path %></a></li>
-    <li class="item"><%= link_to "Sign up", new_user_registration_path %></a></li>
-    <li class="item"><%= link_to "Log in", new_user_session_path %></a></li>
+    <li class="item"><%= link_to "Sign up", signup_path %></a></li>
+    <li class="item"><%= link_to "Log in", login_path %></a></li>
 
 
     <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
