--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 
   <body>
  <header>
+  <% flash.each do |k,v| %>
+    <%= v %>
+    <% end %>
        <%= navbar %>
   </header>
      <div class="grid-container">
