--- a/app/views/layouts/_admin_logged_in_navbar.html.erb
+++ b/app/views/layouts/_admin_logged_in_navbar.html.erb
@@ -7,7 +7,7 @@
     <li class="item"><%= link_to "Create a Company", new_company_path %></a></li>
     <li class="item"><%= link_to "All lists", lists_path %></a></li>
     <li class="item"><%= link_to "Admin", rails_admin_path %></a></li>
-    <li class="item"><%= link_to "Log out", destroy_user_session_path, method: :delete %></a></li>
+    <li class="item"><%= link_to "Log out", logout_path, method: :delete %></a></li>
     <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
   </ul>
 </nav>
