--- a/app/views/layouts/_logged_in_navbar.html.erb
+++ b/app/views/layouts/_logged_in_navbar.html.erb
@@ -8,7 +8,7 @@
     <li class="item"><%= link_to "Create a list", new_list_path %></a></li>
     <li class="item"><%= link_to "All lists", lists_path %></a></li>
     
-    <li class="item"><%= link_to "Log out", destroy_user_session_path, method: :delete %></a></li>
+    <li class="item"><%= link_to "Log out", logout_path, method: :delete %></a></li>
 
   
     <%# <li class="item has-submenu"> %>
