adds dotenv-railsgem

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -11,6 +11,14 @@
 <%# Displays company description %>
 <h2>Content: <%= @company.description %></h2><br>
 
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=<%= ENV['GOOGLE_KEY'] %>
+    &q=Space+Needle,Seattle+WA" allowfullscreen>
+</iframe>
+
 <%# Displays company comment count %>
 <h3>Comments count: <%= @company.comments.count %></h3> 
 
