--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -15,7 +15,7 @@
     width="600"
     height="450"
     frameborder="0" style="border:0"
-    src="https://www.google.com/maps/embed/v1/place?key=<%=ENV['GOOGLE_KEY']%>&q=Eiffel+Tower,Paris+France" allowfullscreen>
+    src="https://www.google.com/maps/embed/v1/place?key=<%=ENV['GOOGLE_KEY']%>&q=<%= @company.location %>" allowfullscreen>
   </iframe>
 
 <%# Displays company comment count %>
