adds email wesbite phone and more to company show page

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -8,8 +8,17 @@
 <%# Displays company title %>
 <h1>Company NAME: <%= @company.title %></h1>
 
+<%# Displays company email %>
+<h2>Email: <%= @company.email %></h2><br>
+
+<%# Displays company website %>
+<h2>Website: <%= @company.website %></h2><br>
+
+<%# Displays company website %>
+<h2>Phone: <%= @company.phone %></h2><br>
+
 <%# Displays company description %>
-<h2>Content: <%= @company.description %></h2><br>
+<h2>About: <%= @company.description %></h2><br>
 
   <iframe
     width="600"
