--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,6 +35,18 @@ body {
   
 }
 
+.single-comment{
+    /* display: inline-flex; */
+    border-style: solid;
+    border-width: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+}
+
 
 
 /* ul.a {
